apps/agentgateway/service.agentgateway-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentgateway-admin
  namespace: cluster
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: public-gateway
    app.kubernetes.io/name: public-gateway
    gateway.networking.k8s.io/gateway-name: public-gateway
  ports:
    - name: http-admin
      port: 15001
      targetPort: 15002
      protocol: TCP
      appProtocol: HTTP
