apps/agentgateway/httproute.agentgateway-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway-admin
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: public-gateway
      namespace: cluster
      kind: Gateway
  hostnames:
    - agentgateway.anyflow.net
  rules:
    - matches:
        - path:
            type: Exact
            value: /logout
      filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: api.anyflow.net
            scheme: https
            path:
              type: ReplaceFullPath
              replaceFullPath: /auth/logout
            statusCode: 302
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /ui/
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: agentgateway-proxy
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      backendRefs:
        - name: agentgateway-proxy
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /config_dump
      backendRefs:
        - name: agentgateway-proxy
          port: 80
