apps/agentgateway/httproute.kagent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent-upstream
  namespace: agentgateway-system
spec:
  parentRefs:
    - name: agentgateway-proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
          headers:
            - name: x-kagent-host
              value: stock-mcp.kagent
      backendRefs:
        - name: stock-mcp
          namespace: kagent
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
          headers:
            - name: x-kagent-host
              value: kagent-tools.kagent
      backendRefs:
        - name: kagent-tools
          namespace: kagent
          port: 8084
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
          headers:
            - name: x-kagent-host
              value: kagent-grafana-mcp.kagent
      backendRefs:
        - name: kagent-grafana-mcp
          namespace: kagent
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - name: kagent-mcp
          namespace: kagent
          port: 8083
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - name: x-kagent-host
              value: samsung-stock-agent.kagent
      backendRefs:
        - name: samsung-stock-agent-a2a
          namespace: kagent
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - name: x-kagent-host
              value: tesla-stock-agent.kagent
      backendRefs:
        - name: tesla-stock-agent-a2a
          namespace: kagent
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kagent-a2a
          namespace: kagent
          port: 8083
