apps/agentgateway/authorizationpolicy.agentgateway-admin.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: public-gateway-agentgateway-oauth2-proxy
  namespace: cluster
spec:
  selector:
    matchLabels:
      app: public-gateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
    - to:
        - operation:
            hosts:
              - agentgateway.anyflow.net
            notPaths:
              - /oauth2*
              - /logout
