apps/agentgateway/authzpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: public-gateway-agentgateway-authelia
  namespace: cluster
spec:
  selector:
    matchLabels:
      app: public-gateway
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - agentgateway.anyflow.net
            notPaths:
              - /auth*
              - /logout
